<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

<header
    android:fragment="com.dardan.musicplayer.Activity.SettingsActivity$GeneralPreferenceFragment"
    android:icon="@drawable/ic_info_black_24dp"
    android:title="@string/pref_header_general"
    />
    <header
        android:fragment="com.dardan.musicplayer.Activity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_settings_notifications"
        android:title="@string/pref_header_notifications"
        />

    <header
        android:fragment="com.dardan.musicplayer.Activity.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync"
        android:title="@string/pref_header_account"
        />

</preference-headers>