<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<SwitchPreference
    android:defaultValue="true"
    android:key="notifications_new_message"
    android:icon="@drawable/ic_settings_notifications"
    android:title="@string/pref_title_new_message_notifications"
    />
<RingtonePreference
    android:defaultValue="content://settings/system/notification_sound"
    android:dependency="notifications_new_message"
    android:icon="@drawable/ic_ringtone"
    android:key="notifications_new_message_ringtone"
    android:ringtoneType="notification"
    android:title="@string/pref_title_ringtone"
    />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:icon="@drawable/ic_vibration"
        android:title="@string/pref_title_vibrate"
        />

</PreferenceScreen>